# db_excalibur

./: CMakeLists.txt  LICENSE  README.md  sandbox.sh
cmake/: FindErlang.cmake  FindLibunwind.cmake
cpp/: CMakeLists.txt  common.hpp  excalibur_context.cpp  excalibur_context.hpp  exception.cpp  exception.hpp  run_query.cpp  tree_utils.hpp
cpp/engine/: CMakeLists.txt  bandit_utils.cpp  bandit_utils.hpp  blocked_space.cpp  blocked_space.hpp  bloomfilter.cpp  bloomfilter.hpp  budget.cpp  budget.hpp  buffer.cpp  buffer.hpp  catalog.cpp  catalog.hpp  date_utils.hpp  engine.cpp  engine.hpp  loleplan_passes.cpp  loleplan_passes.hpp  partitioner.cpp  partitioner.hpp  plan.cpp  plan.hpp  profile.cpp  profile.hpp  profile_viewer.py  protoplan.cpp  protoplan.hpp  query.cpp  query.hpp  sql_types.cpp  sql_types.hpp  stream.cpp  stream.hpp  stream_pass.cpp  stream_pass.hpp  stream_plan.proto  string_heap.cpp  string_heap.hpp  string_utils.hpp  table.cpp  (+29 more)
cpp/engine/adaptive/: CMakeLists.txt  brain.cpp  brain.hpp  decision.cpp  decision.hpp  decisions.cpp  decisions.hpp  metrics.cpp  metrics.hpp  plan_profile.cpp  plan_profile.hpp  rule_triggers.cpp  rule_triggers.hpp  rule_triggers_impl.cpp  rule_triggers_impl.hpp  stream_reoptimizer.cpp  stream_reoptimizer.hpp
cpp/engine/lolepops/: CMakeLists.txt  hash_group_by.cpp  hash_group_by.hpp  hash_join.cpp  hash_join.hpp  hash_op.cpp  hash_op.hpp  lolepop.cpp  lolepop.hpp  output.cpp  output.hpp  scan.cpp  scan.hpp  sort.cpp  sort.hpp  sort_helper.cpp  sort_helper.hpp  voila_lolepop.cpp  voila_lolepop.hpp
cpp/engine/storage/: CMakeLists.txt  csv_loader.cpp  csv_loader.hpp  file_io.cpp  file_io.hpp  flat_array_scan.hpp  scan_interface.cpp  scan_interface.hpp  scan_thread_tracker.hpp
cpp/engine/test/: CMakeLists.txt  experiments.cpp  generate_exp.py  generate_tpch.sh  join_exp_gen_data.cpp  plot.py  run_combinations.py  run_experiments.py  test_config.cpp  test_csv.cpp  test_engine.cpp  test_engine1.cpp  test_flavor_spec.cpp  test_group_by.cpp  test_join.cpp  test_parser.cpp  test_scan.cpp  test_sort.cpp  test_strings.cpp  test_tpch.cpp  test_tpch_q1.cpp  test_tpch_q10.cpp  test_tpch_q12.cpp  test_tpch_q18.cpp  test_tpch_q3.cpp  test_tpch_q4.cpp  test_tpch_q6.cpp  test_tpch_q9.cpp  test_types.cpp  test_utils.cpp  test_utils.hpp  tpch_sf1_q9a.txt  tpch_sf1_q9b.txt  tpch_test_utils.cpp  tpch_test_utils.hpp.in
cpp/engine/test/results/: CMakeLists.txt  tpch_q12_sf1.txt  tpch_q12_sf10.txt  tpch_q18_sf1.txt  tpch_q18_sf10.txt  tpch_q1_sf1.txt  tpch_q1_sf10.txt  tpch_q1_sf100.txt  tpch_q3_sf1.txt  tpch_q3_sf10.txt  tpch_q4_sf1.txt  tpch_q4_sf10.txt  tpch_q6_sf1.txt  tpch_q6_sf10.txt  tpch_q6_sf100.txt  tpch_q9_sf1.txt  tpch_q9_sf10.txt  tpch_q9_sf100.txt
cpp/engine/voila/: CMakeLists.txt  code_cache.cpp  code_cache.hpp  compile_request.cpp  compile_request.hpp  flavor.cpp  flavor.hpp  global_jit.hpp  jit.cpp  jit.hpp  jit_complex_kernels.hpp  jit_create_xvalue_pass.hpp  jit_funcs.hpp  jit_prepare_pass.cpp  jit_prepare_pass.hpp  signature.cpp  signature.hpp  statement_fragment_selection_pass.cpp  statement_fragment_selection_pass.hpp  statement_identifier.cpp  statement_identifier.hpp  voila.cpp  voila.hpp
cpp/engine/voila/llvmcompiler/: CMakeLists.txt  llvm_build_utils.hpp.in  llvm_compiler.cpp  llvm_compiler.hpp  llvm_fragment.cpp  llvm_fragment.hpp  llvm_interface.cpp  llvm_interface.hpp
cpp/server/: CMakeLists.txt  server.cpp
cpp/system/: CMakeLists.txt  build.cpp.in  build.hpp.in  build_git.cpp.in  configuration.cpp  configuration.hpp  event_bus.cpp  event_bus.hpp  memory.cpp  memory.hpp  profiling.cpp  profiling.hpp  scheduler.cpp  scheduler.hpp  system.cpp  system.hpp
cpp/system/test/: CMakeLists.txt  test_memory.cpp  test_scheduler1.cpp
cpp/utils/: cache.hpp
cpp/utils/test/: CMakeLists.txt  test_cache.cpp
paper/: arch.pdf_tex  assumed_space.pdf_tex  explore_grid.pdf_tex  explore_maxd.pdf_tex  explore_rand.pdf_tex  idea.pdf_tex  print_conf_table.py  vmIntegration.pdf_tex
